feat: add protected and private routes
